<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_to_fav"
        app:showAsAction="always"
        android:icon="@drawable/ic_fav"
        android:title="@string/favourite" />
</menu>