<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_like"
        android:icon="@drawable/ic_bookmark_selector"
        android:title="@string/like"
        app:showAsAction="always" />
</menu>